--- a/app/styles/components/_x3dom.scss
+++ b/app/styles/components/_x3dom.scss
@@ -3,50 +3,3 @@
   height: 100%;
   position: relative;
 }
-
-.search-container {
-    padding-top: 10px;
-    width:100%;
-    text-align: center;
-    position:absolute;
-}
-
-.search-content {
-    width: 70%;
-    display:inline;
-}
-
-#searchDefault {
-    display:inline;
-    margin-bottom:3px;
-    max-width:11%;
-}
-
-#sensorLabel{
-    font-style: italic;
-}
-
-/* Font size in modal bigger! */
-#sensor-modal {
-    font-size: 14px;
-}
-
-.panel.panel-default {
-    margin: 0;
-}
-
-.modal {
-    text-align:center;
-}
-
-.modal-dialog {
-    width: auto;
-    display:inline-block;
-    text-align: left;
-}
-
-
-/* Make the sensor values bold in modal */
-#modalRoomValue {
-    font-style: bold;
-}
