--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -130,6 +130,13 @@ ul.nav {
     padding: 14px 24px;
     margin: 10px; }
 
+.modal {
+  text-align: center; }
+
+.modal-dialog {
+  width: auto;
+  display: inline-block; }
+
 .main-view {
   height: calc(100vh - 50px - 50px);
   position: relative; }
@@ -222,9 +229,6 @@ viewbox on Chrome.
 .options-btn {
   display: none; }
 
-.modal-portrait {
-  display: none; }
-
 .panorama-btn {
   pointer-events: all; }
 
@@ -291,25 +295,16 @@ viewbox on Chrome.
 .binary-rect {
   pointer-events: none; }
 
-@media only screen and (max-width: 768px) and (orientation: landscape) {
-  .modal-portrait {
-    display: none; }
-  .modal-landscape {
-    display: inline; }
-  .modal-value {
-    margin-bottom: 0px; } }
+.modal-body.modal-vertical {
+  display: inline-flex; }
 
-@media only screen and (max-width: 768px) and (orientation: portrait) {
-  .modal-portrait {
-    display: inline; }
-  .modal-landscape {
-    display: none; }
-  .modal-value {
-    margin-bottom: 0px;
-    margin-left: 10px;
-    margin-right: 30px; } }
+.modal-body .btn-group {
+  margin: 5px; }
 
-@media only screen and (max-width: 769px) {
+.modal-body .btn-group-vertical {
+  margin: 5px; }
+
+@media only screen and (max-width: 768px) {
   .previous-button, .next-button {
     font-size: 36px;
     position: fixed; }
@@ -341,43 +336,6 @@ viewbox on Chrome.
   width: 100%;
   height: 100%;
   position: relative; }
-
-.search-container {
-  padding-top: 10px;
-  width: 100%;
-  text-align: center;
-  position: absolute; }
-
-.search-content {
-  width: 70%;
-  display: inline; }
-
-#searchDefault {
-  display: inline;
-  margin-bottom: 3px;
-  max-width: 11%; }
-
-#sensorLabel {
-  font-style: italic; }
-
-/* Font size in modal bigger! */
-#sensor-modal {
-  font-size: 14px; }
-
-.panel.panel-default {
-  margin: 0; }
-
-.modal {
-  text-align: center; }
-
-.modal-dialog {
-  width: auto;
-  display: inline-block;
-  text-align: left; }
-
-/* Make the sensor values bold in modal */
-#modalRoomValue {
-  font-style: bold; }
 
 #analytics {
   height: 100%; }
